tests/More/Good/13.tig
/* for */
let
	var x:int := 0
in 
	(for i:=0 to 100 do x:=x+1)
end
