tests/More/Bad/12.tig
/* error - for index assigned to */
for i:=1 to 10 do i:= i+1


